# tinyinject

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  python-app.yml
src/tinyinject/: __init__.py  context.py  di.py  registry.py  require.py
tests/: test_override.py  test_registry.py  test_require.py
