[project]
name = "tinyinject"
version = "0.1.0"
description = "A minimalistic dependency injection framework"
authors = [
    {name = "Krzysztof Stronka",email = "stronka.k@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
]
